# Heroes_HW

./: .gitignore  Archer.h  Axe.h  Bow.h  CMakeLists.txt  Config.h  Hero.h  Human.h  Orc.h  README.md  Race.h  Warrior.h  Weapon.h  main.cpp
Choice/: Choice.h
Creator/abstraction/: HeroesCreator.h  RaceCreator.h  WeaponCreator.h
Creator/c_hero/: ArcherCreator.h  WarriorCreator.h
Creator/c_race/: HumanCreator.h  OrcCreator.h
Creator/c_weapon/: AxeCreator.h  BowCreator.h
Hero/: Archer.h  Hero.h  Warrior.h
Race/: Elf.h  Human.h  Orc.h  Race.h
Specialization/: Archer.h  Specialization.h  Warrior.h
Weapon/: Axe.h  Bow.h  Hands.h  Weapon.h
